SCD1 Snapshot Merge implementation and SCD2Merge Enhancements (#5)
* This commit introduces Snapshot Mode for SCD1 operations, allowing comparison of complete
snapshots to efficiently identify and apply differences. The implementation includes:
- Support for value column metadata with delta tolerances and null handling
- Skip empty source option to prevent deleting records when source is empty
- Comprehensive test coverage through unit and integration tests

Additional changes:
- Fix corner case in merge cardinality checking
- Validations for SCD2 column configuration to prevent runtime errors and improve error messages.

---------

Co-authored-by: Rama Mothukuri <mothukur@arcesium.com>